<resources>
    <string name="app_name">Register</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="txt_password">TxtPassword</string>
    <string name="Btn_sign_in">SIGN IN</string>
    <string name="Btn_sign_up">SIGN UP</string>
    <string name="first_name">Firstname</string>
    <string name="last_name">Lastname</string>
    <string name="Confirm_name">Confirm password</string>
    <string name="Btn_register">REGISTER</string>
    <string name="user">Peter McDonald</string>
    <string name="user_email">peter@email.com</string>
    <string name="User_list">USER LIST</string>
    <string name="Edit_user">UPDATE USER</string>
    <string name="Menu1">List male users</string>
    <string name="Menu2">List female users</string>
    <string name="Menu3">List all users</string>
    <string name="Menu4">About me: developer info.</string>
    <string name="Menu5">Logout: go to Sign in Activity</string>
    <string name="Menuc1">Update User</string>
    <string name="MenuC2">Delete User</string>
    <string name="Btn_update">UPDATE</string>
    <string name="Birth">Birth</string>
    <string name="Country">Country</string>
    <string name="Phone">Phone</string>
    <string name="Gender">Gender</string>

    <string-array name="Country">
        <item>Selección País</item>
        <item>Colombia</item>
        <item>Brasil</item>
        <item>USA</item>
        <item>Ecuador</item>
        <item>Bolivia</item>
        <item>Mexico</item>
        <item>Argentina</item>
    </string-array>

    <string-array name="Gender">
        <item>Selección Género</item>
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
</resources>